--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@superblocksteam/javascript",
-  "version": "0.2126.0",
+  "version": "0.2176.0",
   "description": "Superblocks JavaScript Plugin",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -14,7 +14,7 @@
     "npm": "^8.3.1"
   },
   "scripts": {
-    "build": "npm run clean && tsc",
+    "build": "npm run clean && npx swc src -d dist",
     "clean": "rimraf ./dist *tsbuildinfo",
     "lint": "eslint . --ext ts",
     "lint:fix": "eslint . --ext ts --fix",
@@ -33,13 +33,15 @@
     "esprima": "4.0.1",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
+    "minimist": "1.2.6",
     "moment": "2.29.4",
     "piscina": "^3.2.0",
-    "xmlbuilder2": "3.0.2",
-    "minimist": "1.2.6"
+    "xmlbuilder2": "3.0.2"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.57",
     "@types/esprima": "^4.0.3",
+    "@types/jest": "26.0.24",
     "@types/lodash": "^4.14.170",
     "@types/node": "14.14.22",
     "@typescript-eslint/eslint-plugin": "4.19.0",
@@ -50,13 +52,12 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "3.3.1",
     "husky": "^4.3.8",
+    "jest": "26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "2.2.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.2.3",
-    "jest": "26.6.3",
-    "@types/jest": "26.0.24",
-    "ts-jest": "26.5.6"
+    "ts-jest": "26.5.6",
+    "typescript": "^4.2.3"
   },
   "husky": {
     "hooks": {
