--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@superblocksteam/javascript",
-  "version": "0.2223.0",
+  "version": "0.2319.0",
   "description": "Superblocks JavaScript Plugin",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
+    "@swc/core": "1.3.9",
     "@types/esprima": "^4.0.3",
     "@types/jest": "26.0.24",
     "@types/lodash": "^4.14.170",
