--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@superblocksteam/javascript",
-  "version": "0.2448.0",
+  "version": "0.2502.0",
   "description": "Superblocks JavaScript Plugin",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -40,7 +40,8 @@
   },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
-    "@swc/core": "1.3.9",
+    "@swc/core": "1.3.19",
+    "@swc/jest": "0.2.23",
     "@types/esprima": "^4.0.3",
     "@types/jest": "26.0.24",
     "@types/lodash": "^4.14.170",
